<resources>
    <string name="app_name">Piaya</string>
    <string name="descarte">"Incorrect trash / waste disposal "</string>
    <string name="usoLuz">Improper use of light</string>
    <string name="problema">Problems related to water</string>
    <string name="outro">Others...</string>
    <string name="tipo">What type of occurrence?</string>
    <string name="tipoLixo">What kind of waste was disposed of incorrectly?</string>
    <string name="papel">Paper</string>
    <string name="reciclavel">Recyclable</string>
    <string name="comum">Common</string>
    <string name="infectante">Infectant</string>
    <string name="quimico">Chemical</string>
    <string name="perfurocortante">Sharp-edged Object</string>
    <string name="lixeira">In which trash was this waste disposed of incorrectly?</string>
    <string name="naoReciclavel">Non-recyclable</string>
    <string name="entupimento">Clogging</string>
    <string name="torneira">Open tap</string>
    <string name="luzAcesa">Light on in empty environment</string>
    <string name="arCondicionado">Air conditioning connected in empty room</string>
    <string name="infoAdicional">Additional Information</string>
    <string name="obs">If necessary, write down observations</string>
    <string name="digiteAqui">Type here...</string>
    <string name="lugar">Place</string>
    <string name="qr">QR CODE Reader</string>

    <string-array name="locais">
        <item>Sala 01</item>
        <item>Sala 02</item>
        <item>Sala 03</item>
        <item>Sala 04</item>
        <item>Sala 05</item>
        <item>Sala 06</item>
        <item>Sala 07</item>
        <item>Sala 08</item>
        <item>Sala 09</item>
        <item>Sala 10</item>
        <item>Sala 11</item>
        <item>Sala 12</item>
        <item>Laboratorio 01 - Informatica</item>
        <item>Laboratorio 02 - Informatica</item>
        <item>Laboratorio 03 - Informatica</item>
        <item>Laboratorio 04 - Informatica</item>
        <item>Laboratorio 05 - Informatica</item>
        <item>Laboratorio Biologia</item>
        <item>Laboratorio Quimica</item>
        <item>Laboratorio Fisica</item>
    </string-array>
    <string name="invalido">Invalid Location!</string>
    <string name="utilizarQRCode">Use QR Code Reader</string>
    <string name="enviar">Send</string>
    <string name="voltar">Back</string>
    <string name="torneiraQuebrada">Defective tap</string>
    <string name="faltaAgua">Lack of water</string>
    <string name="computadorLigado">Computers connected with empty room</string>

</resources>
