<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content" app:cardCornerRadius="25dp"
                                   app:cardElevation="5dp" android:layout_margin="5dp"
                                   app:cardBackgroundColor="@color/card_background">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/descarte"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/descarteIncorreto"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
                android:textColor="@android:color/black" android:gravity="center"/>
        <TextView
                android:text="@string/tipoLixo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/SubText1" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/descarteIncorreto" android:textColor="@android:color/black"
                android:gravity="center"/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                android:id="@+id/radioGroupTipo" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/SubText1" android:orientation="vertical">
            <RadioButton
                    android:text="@string/papel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioPapel" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="@string/reciclavel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioReciclavel" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="@string/comum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioComum" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="@string/infectante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioInfectante" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="@string/quimico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioQuimico" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="@string/perfurocortante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioPerfurocortante"
                    android:layout_weight="1" android:layout_margin="1dp" android:background="@drawable/border_button"/>
        </RadioGroup>
        <TextView
                android:text="@string/lixeira"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/SubText2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupTipo" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:textColor="@android:color/black" android:gravity="center"/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SubText2" android:layout_marginTop="8dp"
                android:orientation="horizontal">
            <RadioButton
                    android:text="@string/reciclavel"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content" android:id="@+id/radioLixeiraReciclavel"
                    android:layout_weight="1" android:layout_margin="1dp"
                    android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="@string/naoReciclavel"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content" android:id="@+id/radioLixeiraNaoReciclavel"
                    android:layout_weight="1" android:layout_margin="1dp"
                    android:background="@drawable/border_button"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>