<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content" app:cardCornerRadius="25dp"
                                   app:cardElevation="15dp" android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/tipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/tipoOcorrencia"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/black"
                android:textSize="18sp" android:gravity="center"/>
        <RadioGroup
                android:id="@+id/radioTipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tipoOcorrencia">

            <RadioButton
                    android:id="@+id/radioLixo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descarte"
                    android:checked="true" android:layout_margin="5dp" android:background="@drawable/border_button"/>

            <RadioButton
                    android:id="@+id/radioLuz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usoLuz" android:layout_margin="5dp"
                    android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="@string/problema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioAgua" android:layout_weight="1"
                    android:layout_margin="5dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="@string/outro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioOutro" android:layout_weight="1"
                    android:layout_margin="5dp" android:background="@drawable/border_button"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>