<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content" app:cardCornerRadius="25dp"
                                   app:cardElevation="5dp" android:layout_margin="5dp"
                                   app:cardBackgroundColor="#FFEE56">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/infoAdicional"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/informacoes"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                android:textColor="@android:color/black" android:textSize="18sp" android:gravity="center"/>
        <TextView
                android:text="@string/obs"
                android:layout_width="0dp"
                android:layout_height="18dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintTop_toBottomOf="@+id/informacoes" android:layout_marginTop="16dp"
                android:id="@+id/obs" android:gravity="center"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/obs" android:layout_marginTop="8dp"
                android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="24dp" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:hint="@string/digiteAqui"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>