<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content" app:cardCornerRadius="25dp"
                                   android:layout_margin="5dp"
                                   app:cardBackgroundColor="@color/card_background" app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/usoLuz"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/usoLuz" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" android:textColor="@android:color/black" android:textSize="18sp"
                android:gravity="center"/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/usoLuz"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:id="@+id/radioGroupLuz"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp">
            <RadioButton
                    android:text="@string/luzAcesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioLuzAcesa" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button" android:checked="false"/>
            <RadioButton
                    android:text="@string/arCondicionado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioArCondicionado" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="Computadores ligados com a sala vazia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioComputadorLigado"
                    android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>