<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content" app:cardCornerRadius="25dp"
                                   app:cardElevation="5dp" android:layout_margin="5dp"
                                   app:cardBackgroundColor="@color/card_background">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/problema"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/problemasAgua" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                android:textColor="@android:color/black" android:textSize="18sp" android:gravity="center"/>

        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:id="@+id/radioGroupAgua"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/problemasAgua">
            <RadioButton
                    android:text="@string/entupimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioEntupimento" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button" android:checked="false"/>
            <RadioButton
                    android:text="@string/torneira"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioTorneira" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="Torneira com defeito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioTorneiraDefeito" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
            <RadioButton
                    android:text="Falta de água"
                    android:layout_width="386dp"
                    android:layout_height="wrap_content" android:id="@+id/radioFaltaAgua" android:layout_weight="1"
                    android:layout_margin="1dp" android:background="@drawable/border_button"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>